// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarFieldGroupVariant Component should generate select options: toolbarFieldOptions 1`] = `
[
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_groupVariant, {"context":"dolor"})",
    "value": "dolor",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_groupVariant, {"context":"ipsum"})",
    "value": "ipsum",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_groupVariant, {"context":"lorem"})",
    "value": "lorem",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label_groupVariant, {"context":"sit"})",
    "value": "sit",
  },
  {
    "isSelected": false,
    "title": "t(curiosity-toolbar.label, {"context":"groupVariant"})",
    "value": "",
  },
]
`;

exports[`ToolbarFieldGroupVariant Component should handle updating through redux state with component: dispatch, component 1`] = `
[
  [
    [
      {
        "type": "SET_PRODUCT_VARIANT_QUERY_RESET_ALL",
        "variant": "ipsum",
      },
      {
        "type": "SET_CONFIG_RHSM_RESET",
      },
      {
        "type": "SET_GRAPH_LEGEND_RESET",
      },
      {
        "productGroup": undefined,
        "type": "SET_PRODUCT_VARIANT",
        "variant": "ipsum",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldGroupVariant Component should handle updating through redux state with hook: dispatch, hook 1`] = `
[
  [
    [
      {
        "type": "SET_PRODUCT_VARIANT_QUERY_RESET_ALL",
        "variant": "dolor sit",
      },
      {
        "type": "SET_CONFIG_RHSM_RESET",
      },
      {
        "type": "SET_GRAPH_LEGEND_RESET",
      },
      {
        "productGroup": "loremIpsum",
        "type": "SET_PRODUCT_VARIANT",
        "variant": "dolor sit",
      },
    ],
  ],
]
`;

exports[`ToolbarFieldGroupVariant Component should render a basic component: basic 1`] = `
<ToolbarContent
  className="curiosity-toolbar__content"
  isExpanded={false}
  showClearFiltersButton={false}
>
  <ToolbarItem
    variant="label"
  >
    t(curiosity-toolbar.label, {"context":"groupVariant"})
     
  </ToolbarItem>
  <Select
    alignment={
      {
        "position": "left",
      }
    }
    aria-label="t(curiosity-toolbar.placeholder, {"context":"groupVariant"})"
    data-test="toolbarFieldGroupVariant"
    maxHeight={310}
    onSelect={[Function]}
    options={
      [
        {
          "isSelected": undefined,
          "title": "lorem",
          "value": "lorem",
        },
        {
          "isSelected": undefined,
          "title": "ipsum",
          "value": "ipsum",
        },
        {
          "isSelected": undefined,
          "title": "dolor",
          "value": "dolor",
        },
        {
          "isSelected": undefined,
          "title": "sit",
          "value": "sit",
        },
      ]
    }
    placeholder="t(curiosity-toolbar.placeholder, {"context":"groupVariant"})"
    selectedOptions={null}
  />
</ToolbarContent>
`;

exports[`ToolbarFieldGroupVariant Component should return a standalone component with toolbar: standalone toolbar 1`] = `
<Toolbar
  className="curiosity-toolbar pf-m-toggle-group-container ins-c-primary-toolbar"
  collapseListedFiltersBreakpoint="sm"
  id="curiosity-toolbar"
>
  <ToolbarContent
    className="curiosity-toolbar__content"
    isExpanded={false}
    showClearFiltersButton={false}
  >
    <ToolbarItem
      variant="label"
    >
      t(curiosity-toolbar.label, {"context":"groupVariant"})
       
    </ToolbarItem>
    <Select
      alignment={
        {
          "position": "left",
        }
      }
      aria-label="t(curiosity-toolbar.placeholder, {"context":"groupVariant"})"
      data-test="toolbarFieldGroupVariant"
      maxHeight={310}
      onSelect={[Function]}
      options={
        [
          {
            "isSelected": undefined,
            "title": "lorem",
            "value": "lorem",
          },
          {
            "isSelected": undefined,
            "title": "ipsum",
            "value": "ipsum",
          },
        ]
      }
      placeholder="t(curiosity-toolbar.placeholder, {"context":"groupVariant"})"
      selectedOptions={null}
    />
  </ToolbarContent>
</Toolbar>
`;

exports[`ToolbarFieldGroupVariant Component should return null, undefined, or empty if there are one or less options: one or less 1`] = `null`;
